macros/tests/ui/declare/ctx_only_allow_in_init_fail.stderr
error[E0425]: cannot find value `ctx` in this scope
  --> tests/ui/declare/ctx_only_allow_in_init_fail.rs:24:48
   |
24 |       size: ZERO_SIZE, background: Palette::of(ctx).primary()
   |                                                ^^^ not found in this scope
